--- a/Scripts/S.yaml
+++ b/Scripts/S.yaml
@@ -1,13 +1,12 @@
-AWSTemplateFormatVersion: '2019-05-20'
+AWSTemplateFormatVersion: 2010-09-09
 Resources:
   LogsWSO2Bucket:
-    Type: AWS::S3::Bucket
+    Type: 'AWS::S3::Bucket'
     Properties:
       AccessControl: Private
-      BucketName: logs-wso2
+      BucketName: logs-wso2-oas
   LogsAPIsBucket:
-    Type: AWS::S3::Bucket
+    Type: 'AWS::S3::Bucket'
     Properties:
       AccessControl: Private
-      BucketName: logs-apis
-     
+      BucketName: logs-apis-oas
